--- a/package.json
+++ b/package.json
@@ -10,9 +10,29 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-documents/picker": "^10.1.5",
+    "@react-native/new-app-screen": "0.80.1",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
+    "@react-navigation/stack": "^7.4.2",
+    "axios": "^1.10.0",
+    "formik": "^2.4.6",
     "react": "19.1.0",
     "react-native": "0.80.1",
-    "@react-native/new-app-screen": "0.80.1"
+    "react-native-audio-record": "^0.2.2",
+    "react-native-audio-recorder-player": "^3.6.14",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.27.1",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-permissions": "^5.4.1",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.5.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-vector-icons": "^10.2.0",
+    "styled-components": "^6.1.19",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
